tests/valid/Const_Valid_1.wys
constant PI is 3.1415

function main() => void:
    print PI

